# examples

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  build.sh  cert.crt  cert.key  taplo.toml  typos.toml
.github/workflows/: build_runner_image.yml  dev_checks.yml
docker/: Dockerfile.runner
go/: README.md  client.go  go.mod  go.sum  main.go  util.go
java/: README.md  pom.xml
java/src/main/java/org/example/: SqlRunner.java
postgresql/go/: go.mod  go.sum  main.go
python/: README.md  client.py  main.py  requirements.txt  util.py
rust/: Cargo.toml  README.md  clippy.toml  deny.toml  rustfmt.toml
rust/src/: client.rs  util.rs
