[package]
name = "rust-examples"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
default-run = "main"

[[bin]]
name = "main"
path = "bin/main.rs"

[dependencies]
anyhow = "1.0"
arrow-array = { version = "55.2", features = ["chrono-tz"] }
arrow-cast = { version = "55.2", features = ["prettyprint"] }
arrow-flight = { version = "55.2", features = [
    "flight-sql-experimental",
    "tls",
] }
arrow-schema = "55.2"
chrono = "0.4"
futures = "0.3"
regex = "1.10"
tokio = { version = "1.40", features = ["full"] }
tonic = "0.12.3"
